fix: fix bad link overflow on mobile

--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ padding: 1em 2em;
    box-shadow: inset 8px 8px 12px #272727, inset -8px -8px 12px #2B2B2B;   border-radius: 8px;
 
 }
+
 /* Content: Gallery */
 .gallery{
 display:flex;
@@ -666,6 +667,9 @@ width: 100%;
    
    .project--card {
       padding: 1em;
+      background: none;
+      border: none;
+      box-shadow: none;
    }
 
    .content--project h1,
@@ -684,5 +688,9 @@ width: 100%;
    .project--image-container,
    .project--image-grid img {
       margin: 0;
+   }
+
+   .content--project p a {
+      word-wrap: break-word;
    }
 }
